// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba gifExper Llama al componente 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ul />
</Fragment>
`;

exports[`Prueba gifExper debe dem ostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ul>
    <GifGrid
      category="One punch"
      key="One punch"
    />
    <GifGrid
      category="dragon"
      key="dragon"
    />
  </ul>
</Fragment>
`;
